# inspect-lua-vm-stack

./: .gitignore  CMakeLists.txt  Makefile  README.md  inspect.c  inspect.h  inspect_demo.c  ldload.c  linspect.c  ltrim.c  run_inspect.lua  script.lua
scripts/: global.lua  inspect.lua  local.lua  module.lua  script.lua
util/: bin2c.c
